# Bachelorthesis

./: .gitignore  Makefile  README.md  dft.c  error_of_fix_fft.py  fft.c  fft.py  fix_fft.c  input.txt  meson.build  mycomplex.h
highlevel_dfts/: Makefile  error_of_fix_fft.py  fft_accuracy.c  fix_fft.c  fix_fft.h
highlevel_dfts/tests/: fixed-multiplication.c
vhdl/fft/: Makefile  do  sim_fft
vhdl/fft/generate/: Makefile  fft_gtb.vhdl  fft_tb.vhdl  gen_tb.c  gen_twiddle.c  grom.vhdl  regenerate  twid_config  twiddle_val.vhdl
vhdl/fft/generate/input/: tb_config
vhdl/fft/generate/src/: :  common.c  common.h  gen_tb.c  gen_twiddle.c
vhdl/fft/src/: butterfly.vhdl  c_mult.vhdl  counter.vhdl  fft.vhdl  fft_types.pkg  fft_types.vhdl  management_unit.vhdl  mangement_unit.vhdl  mangement_unit_1_2.vhdl  ram.vhdl  ram_1_2.vhdl  ram_group.vhdl  rom.vhdl
vhdl/fft/src/bfu/: c_mult.vhdl
vhdl/fft/src/butterfly_unit/: bfu.vhdl  c_mult.vhdl
vhdl/fft/src/common/: delay.vhdl
vhdl/fft/src/management_unit/: counter.vhdl  mu.vhdl
vhdl/fft/src/mem/: rom.vhdl
vhdl/fft/src/memory/: example_rom.vhdl  ram.vhdl  ram_group.vhdl
vhdl/fft/src/mu/: counter.vhdl  management_unit.vhdl
vhdl/fft/test/: README.md  butterfly_tb.vhdl  counter_tb.vhdl  fft_tb.vhdl  ram_1_2_tb.vhdl  ram_tb.vhdl
vhdl/fft/test/butterfly_unit/: bfu_tb.vhdl  c_mult_tb.vhdl
vhdl/fft/test/common/: delay_tb.vhdl
vhdl/fft/test/management_unit/: counter_tb.vhdl  management_unit_tb.vhdl
vhdl/fft/test/memory/: ram_group_tb.vhdl  ram_tb.vhdl
